metadata1/unpackaged/objects/ATI_Job__c.object
<CustomObject>
    <fields>
        <fullName>Date_Drying_Doc_Uploaded__c</fullName>
        <label>Date Drying Doc Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Photos_Uploaded__c</fullName>
        <description>used for managed repair programs</description>
        <label>Date Final Photos Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Photos_Uploaded__c</fullName>
        <label>Date Initial Photos Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Day__c</fullName>
        <formula>DAY( Date_Taken__c )</formula>
        <label>Date Taken Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Month__c</fullName>
        <formula>CASE(MONTH(  Date_Taken__c  ), 1, &quot;01-January&quot;, 2, &quot;02-February&quot;, 3, &quot;03-March&quot;, 4, &quot;04-April&quot;, 5, &quot;05-May&quot;, 6, &quot;06-June&quot;, 7, &quot;07-July&quot;, 8, &quot;08-August&quot;, 9, &quot;09-September&quot;, 10, &quot;10-October&quot;, 11, &quot;11-November&quot;, 12, &quot;12-December&quot;, &quot;None&quot;)</formula>
        <label>Date Taken Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <description>Formula field referencing &apos;Date &amp; Time Taken&apos; field to display only the date, not time.</description>
        <formula>DATEVALUE( Date_Time_Taken__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Approved__c</fullName>
        <description>Field to indicate the date and time that a job was approved by an admin manager-- populated via &apos;Job Approval Process&apos; Final Approval Action Field Update.</description>
        <label>Date/Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Client_Welcome_Email_Sent__c</fullName>
        <label>Date/Time Client Welcome Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted_for_Approval__c</fullName>
        <description>Field to indicate the date and time that an admin submits a job to an admin manager for approval.  Field populated by the &apos;Job Approval Process&apos; Initial Submission Actions Field Update.</description>
        <label>Date/Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Taken__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Field to indicate the date and time the job was taken</description>
        <label>Date &amp; Time Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Work_Auth_Uploaded__c</fullName>
        <description>for managed repair program</description>
        <label>Date Work Auth Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Stage_Change_To_From_Won__c</fullName>
        <description>Field populate by &apos;Record Date/Time of Status Change&apos; to indicate the date/time Stage change to/from &apos;Won&apos;</description>
        <label>Date of Last Stage Change (To/From Won)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <description>Field to indicate date of loss</description>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Production__c</fullName>
        <formula>IF(
NOT(ISBLANK(Completion_Date__c)), 
Completion_Date__c - DATEVALUE(Job_Start_Date__c), 
TODAY() - DATEVALUE(Job_Start_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Work_Complete__c</fullName>
        <formula>TODAY() - DATEVALUE( Work_Complete_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Work Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Work_Complete_to_Billing_Complete__c</fullName>
        <formula>DATEVALUE(Billing_Complete_Date__c) - DATEVALUE(Work_Complete_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Work Complete to Billing Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Billing_Completion__c</fullName>
        <formula>DATEVALUE(Billing_Complete_Date__c) - DATEVALUE(Job_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Billing Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Work_Complete__c</fullName>
        <formula>DATEVALUE( Work_Complete_Date__c ) - DATEVALUE(Job_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Work Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <description>Field to note the deductible amount.</description>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Collector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Collector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Loss__c</fullName>
        <description>This field is automatically populated by a workflow rule and is used only for list-view display purposes instead of the standard Description field.</description>
        <label>Description of Loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diff__c</fullName>
        <formula>ABS( Estimated_Gross_Profit_RS__c - Job_to_Date_GP_Percent_RS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Field to note what major division/service type the job is related to.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Emergency Svces</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Biohazard</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Catastrophes</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Technical Svces</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECONZ_Error_Message__c</fullName>
        <label>ECONZ Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECONZ_Integration_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECONZ Integration Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECONZ_Last_Callout_Time__c</fullName>
        <label>ECONZ Last Succcessful Callout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECONZ_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECONZ Task Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERA__c</fullName>
        <formula>Account__r.ERA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ES_Job_Type__c</fullName>
        <description>This field is to further clarify the type of ES job.</description>
        <label>ES Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Board-Up</fullName>
                </value>
                <value>
                    <fullName>Roof Tarp</fullName>
                </value>
                <value>
                    <fullName>Water Mitigation</fullName>
                </value>
                <value>
                    <fullName>Smoke Cleaning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Econz_Manual_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Econz Manual Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Egnyte_Full_Path__c</fullName>
        <label>Egnyte Full Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Egnyte_Path__c</fullName>
        <formula>&apos;Salesforce.com/ATI_Jobs/Jobs&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Egnyte Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egnyte_Test__c</fullName>
        <description>test field - to be deleted after Egnyte testing is completed for moving job files under year folders</description>
        <formula>&apos;Salesforce.com/Jobs&apos; &amp; &apos;/&apos; &amp; TEXT(YEAR(DATEVALUE( Date_Time_Taken__c )))</formula>
        <label>Egnyte Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Agency__c</fullName>
        <label>End User Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal (Defense)</fullName>
                </value>
                <value>
                    <fullName>Federal (Civilian)</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Client_Type__c</fullName>
        <label>End User Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Correctional</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Fire Prevention</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Park/Recreation</fullName>
                </value>
                <value>
                    <fullName>Shipboard</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Water/Sanitation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Env_Contents_Supervisor__c</fullName>
        <description>Field to note the supervisor of Environmental or Contents jobs.</description>
        <label>Env/Contents Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alejo Rodriguez, Armando</fullName>
                </value>
                <value>
                    <fullName>Almada, Marco E</fullName>
                </value>
                <value>
                    <fullName>Alva, Joel</fullName>
                </value>
                <value>
                    <fullName>Ambriz, David</fullName>
                </value>
                <value>
                    <fullName>Ambriz, Gerardo</fullName>
                </value>
                <value>
                    <fullName>Arangure, Rogelio</fullName>
                </value>
                <value>
                    <fullName>Arellano, Valente</fullName>
                </value>
                <value>
                    <fullName>Arias, Mauro</fullName>
                </value>
                <value>
                    <fullName>Arreguin Nunez, Rigoberto</fullName>
                </value>
                <value>
                    <fullName>Avina, Francisco</fullName>
                </value>
                <value>
                    <fullName>Barrera, Jose</fullName>
                </value>
                <value>
                    <fullName>Beltran, Maribel</fullName>
                </value>
                <value>
                    <fullName>Burton, Rhonda</fullName>
                </value>
                <value>
                    <fullName>Bustamante, Simon</fullName>
                </value>
                <value>
                    <fullName>Calderon, Jr., Miguel</fullName>
                </value>
                <value>
                    <fullName>Calderon, Miguel</fullName>
                </value>
                <value>
                    <fullName>Camargo, Eduardo</fullName>
                </value>
                <value>
                    <fullName>Campos, Richard J.</fullName>
                </value>
                <value>
                    <fullName>Campos, Veronica</fullName>
                </value>
                <value>
                    <fullName>Caraveo, Hector</fullName>
                </value>
                <value>
                    <fullName>Carrasco, Daniel</fullName>
                </value>
                <value>
                    <fullName>Castellanos, Ramon A.</fullName>
                </value>
                <value>
                    <fullName>Cellona, Juan D.</fullName>
                </value>
                <value>
                    <fullName>Cervantes, Francisco Jr.</fullName>
                </value>
                <value>
                    <fullName>Chavez, Melesio</fullName>
                </value>
                <value>
                    <fullName>Colon, Anthony</fullName>
                </value>
                <value>
                    <fullName>Dalo, Anthony J.</fullName>
                </value>
                <value>
                    <fullName>De Infante, Anastacia</fullName>
                </value>
                <value>
                    <fullName>De Santiago, Juan M.</fullName>
                </value>
                <value>
                    <fullName>Durazo, Christian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <description>To debug the PM update</description>
        <label>Error Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_to_Actual_Completion_Days__c</fullName>
        <formula>Completion_Date__c - Estimated_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est-to-Actual Completion Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Amount_JTD_worked_billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimate Amount = JTD worked billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Exists__c</fullName>
        <formula>MICA_Integration__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Forecast_Difference__c</fullName>
        <formula>Amount__c - Total_Billing_Forecast_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Forecast Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to indicate that the job is only an estimate</description>
        <label>Estimate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Status__c</fullName>
        <description>Estimate Status to be updated by Managed Repair Program Admins.</description>
        <label>Estimate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimating</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_Submitted_Date__c</fullName>
        <description>Field to indicate the date an estimate was sent to a prospective client.</description>
        <label>Estimate Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Type__c</fullName>
        <label>Estimate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Estimate Only</fullName>
                </value>
                <value>
                    <fullName>Ladder Assist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date_Per_PD__c</fullName>
        <label>Estimated Completion Date Per PM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>This date should reflect the estimated completion date on the contract with the customer.</description>
        <label>Estimated Completion Date per Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Profit_RS__c</fullName>
        <label>Estimated Gross Profit %</label>
        <summarizedField>Financial__c.Gross_Profit__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EstimatingReview_Count__c</fullName>
        <description>Job Stage Count when stage is Estimating/Review</description>
        <formula>IF(ISPICKVAL( Stage__c ,&quot;Estimating/Review&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EstimatingReview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimating_Review_Date__c</fullName>
        <description>Date/Time field to record when the job is updated to Estimating/Review stage for reporting purposes.</description>
        <label>Estimating/Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>ExpectedRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Job_Walk_Date__c</fullName>
        <description>Date that final job walk took place</description>
        <label>Final Job Walk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Record_Availablity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Record Availablity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Successful_Estimate_Upload__c</fullName>
        <label>First Successful Estimate Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <formula>&quot;Q&quot;+ TEXT(CEILING(MONTH(DATEVALUE( CreatedDate )) / 3 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE( CreatedDate )))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For offerLetterToPDF method on JobUtility apex class.</description>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flagtwo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagtwo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <formula>CASE( Stage__c , &quot;Qualification&quot;,&quot;Pipeline&quot;, &quot;Estimating/Review&quot;, &quot;Pipeline&quot;,&quot;Won&quot;,&quot;Closed&quot;,&quot;Lost&quot;,&quot;Omitted&quot;,&quot;Work Complete&quot;,&quot;Closed&quot;,&quot;Billing Complete&quot;,&quot;Closed&quot;,&quot;Pipeline&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <defaultValue>&quot;Pipeline&quot;</defaultValue>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Last_Timberline_Update__c</fullName>
        <label>Forecast Last Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forms_Count_Jobs__c</fullName>
        <label>Forms Count Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Billing__c</fullName>
        <formula>Total_Billing_Forecast_Amount__c  -  Job_to_Date_Work_Billed_RS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Account_Prefix_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is check, it will overwrite the GL code assigned by the system.</description>
        <inlineHelpText>Check to overwrite.</inlineHelpText>
        <label>GL Account Prefix Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account_Prefix__c</fullName>
        <description>SYSTEM USE ONLY. This field is automatically populated by Apex when a record saves. It is used to populate a field with the same name in TImberline. It is only populated if the user has the feature to calculate job numbers.</description>
        <inlineHelpText>SYSTEM USE ONLY</inlineHelpText>
        <label>GL Account Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_AdjWF__c</fullName>
        <description>JC Adjustment to bring GP to Estimate-Populated by WorkFlow</description>
        <label>GP_AdjWF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Adj_RS__c</fullName>
        <formula>if(round(abs( Job_to_Date_Work_Billed_Next_Month_RS__c * (1- Estimated_Gross_Profit_RS__c ) - Job_to_Date_Costs_Next_Month_Costs_RS__c ),-2)&lt;5000,0,(round(Job_to_Date_Work_Billed_Next_Month_RS__c * (1-Estimated_Gross_Profit_RS__c )- Job_to_Date_Costs_Next_Month_Costs_RS__c,-2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP_Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Adj__c</fullName>
        <label>GP_Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Performance2__c</fullName>
        <formula>IF(AND(

Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c , Diff__c&gt;0.001,Diff__c &lt;0.01),&quot;Intermediate&quot;,IF(Estimated_Gross_Profit_RS__c &lt;Job_to_Date_GP_Percent_RS__c,&quot;Good&quot;,IF(Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c,&quot;Poor&quot;,NULL)))


/*
IF( Diff__c =0.00, &quot;Good&quot;,

IF(AND(Diff__c&gt;0.001,Diff__c &lt;0.01),&quot;Intermediate&quot;,
IF(Diff__c&gt;0.01,&quot;Poor&quot;,NULL)))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Performance2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Performance__c</fullName>
        <formula>IF(AND(

Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c , Diff__c&gt;0.001,Diff__c &lt;0.03),&quot;Intermediate&quot;,IF(Estimated_Gross_Profit_RS__c &lt;Job_to_Date_GP_Percent_RS__c,&quot;Good&quot;,IF(Job_to_Date_GP_Percent_RS__c&lt; Estimated_Gross_Profit_RS__c,&quot;Poor&quot;,NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_EMAIL_API__c</fullName>
        <formula>&quot;EMAIL&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Getfeedback EMAIL API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_Email__c</fullName>
        <label>Getfeedback Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Getfeedback_Phone_Number__c</fullName>
        <description>Send survey to  Mobile</description>
        <label>Getfeedback Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Getfeedback_Remainder_Text__c</fullName>
        <label>Getfeedback Remainder Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_SMS_API__c</fullName>
        <formula>&quot;SMS&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Getfeedback SMS API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guild_Approval_Date__c</fullName>
        <description>Date that Executive Management approved a guild-- populated by &apos;Guild Approval Time Stamp&apos; workflow field update</description>
        <label>Guild Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guild_Approval__c</fullName>
        <description>Executive management to approve guild request</description>
        <label>Guild Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guild_Request_Comments__c</fullName>
        <description>Explanatory comments for Guild Request</description>
        <label>Guild Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guild_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For PM to request contacts off of the guild survey</description>
        <label>Guild Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home Phone of Project Site Contact</description>
        <formula>Project_Site_Contact_Name__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Acct__c</fullName>
        <description>Flag to note whether or not the job is a house account.</description>
        <label>House Acct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspected__c</fullName>
        <description>Date when PD inspects the property for the first time.  Managed Program Repair Admin to input.</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Inspected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Adjuster_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance Adjuster/Broker for this Job-- referenced in New Job VF page</description>
        <label>Insurance Adjuster/Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Insurance Adjuster/Broker)</relationshipLabel>
        <relationshipName>ATIJobIAB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Overdue_Days__c</fullName>
        <description>How many days an invoice is overdue. Today() - Completion Date.</description>
        <formula>today() - Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Overdue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE1_s_Manager_the_Logged_In_User__c</fullName>
        <formula>IF( Account_Executive_1__r.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE1&apos;s Manager the Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE1_s_Mgr_s_Mgr_s_Mgr_Logged_In__c</fullName>
        <formula>IF( Account_Executive_1__r.Manager.Manager.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE1&apos;s Mgr&apos;s Mgr&apos;s Mgr Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE1_the_Logged_in_User__c</fullName>
        <formula>IF(  Account_Executive_1__c  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE1 the Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE2_s_Manager_the_Logged_In_User__c</fullName>
        <formula>IF( Account_Executive_2__r.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE2&apos;s Manager the Logged In User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>